# maleficer

./: .gitignore  Cargo.toml  README  README.md  keybinds.conf  keymap.yaml  main.py  psh  pyproject.toml  win_cargo
assets/: char_select.xp  main_menu.xp
raws/: spawns.json
src/: actions.py  actions.rs  behavior.py  board.py  board.rs  camera.rs  components.py  components.rs  condition.py  config.rs  coord.rs  create.py  damage_system.rs  display.py  ecs.py  engine.py  event.py  gamelog.rs  graphics.rs  gui.rs  input.py  input.rs  input_handlers.py  location.py  loop.py  main.py  main.rs  map.rs  map_indexing_system.rs  math_util.py  melee_combat_system.rs  monster_ai_system.rs  phase.py  player.rs  processors.py  rect.rs  rltk_main.rs  scene.py  spawner.rs  state.rs  (+4 more)
src/board/: components.rs  mod.rs  systems.rs
src/create/: __init__.py  item.py  npc.py  player.py  spell.py  tile.py  ui.py
src/effects/: damage.rs  mana.rs  mod.rs  movement.rs  particles.rs  targeting.rs  triggers.rs
src/map_builders/: common.rs  mod.rs  simple_map.rs
src/raws/: item_structs.rs  mob_structs.rs  mod.rs  rawmaster.rs  spawn_table_structs.rs
src/systems/: damage.rs  inventory.rs  item.rs  map_indexing.rs  melee_combat.rs  mod.rs  monster_ai.rs  particle.rs  save_load.rs  spell.rs  visibility.rs
