[package]
name = "malefactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
# rltk = { default-features = false, features = [ "crossterm" ], git = "https://github.com/amethyst/bracket-lib" }
specs = { version ="0.18.0", features= ["serde"]}
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
hocon = "0.9.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
